[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/World.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/floor/komtur_floortiles.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/tree_beech.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/christine.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Komtur.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/DerGruene.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Spinne.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Castle.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/assets/vfx/CanvasBlur.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Chapel.tscn" type="PackedScene" id=11]
[ext_resource path="res://resources/assets/music/DSS_MainTheme_pt1.mp3" type="AudioStream" id=12]
[ext_resource path="res://scenes/WorldGen.gd" type="Script" id=13]
[ext_resource path="res://scenes/Castle.gd" type="Script" id=14]
[ext_resource path="res://resources/assets/vfx/CanvasShockwave.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/ButtonTest.gd" type="Script" id=16]
[ext_resource path="res://resources/assets/vfx/ShaderOutline.shader" type="Shader" id=17]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 17 )
shader_param/outline_thickness = 1.5
shader_param/outline_color = Color( 1, 0.839216, 0, 1 )

[sub_resource type="Environment" id=1]
background_mode = 4
ambient_light_color = Color( 1, 0.972549, 0.870588, 1 )
tonemap_mode = 2
tonemap_exposure = 0.85
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_strength = 1.2
glow_blend_mode = 1
glow_hdr_threshold = 1.2
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Gradient" id=4]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.30038, 0.703422, 1 )
colors = PoolColorArray( 0.15, 0.15, 0.15, 0, 2, 2, 2, 1, 2, 2, 2, 1, 1.04, 1.04, 1.04, 0 )

[node name="World" type="YSort"]
position = Vector2( 3, -4 )
script = ExtResource( 1 )

[node name="TileMap_Ground" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 64 )
format = 1

[node name="Beech" parent="." instance=ExtResource( 3 )]
position = Vector2( 540, -197 )

[node name="Christine" parent="." instance=ExtResource( 4 )]
position = Vector2( -384, 6400 )
__meta__ = {
"_edit_group_": true
}

[node name="Komtur" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 6368 )

[node name="Spinne" parent="." instance=ExtResource( 7 )]
position = Vector2( -427, -427 )

[node name="Castle" parent="." instance=ExtResource( 8 )]
position = Vector2( 256, 6144 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 14 )

[node name="DerGruene" parent="." instance=ExtResource( 6 )]
position = Vector2( -199, -88 )

[node name="Chapel" parent="." instance=ExtResource( 11 )]
material = SubResource( 2 )
position = Vector2( 850, -255 )

[node name="WorldGen" type="YSort" parent="."]
script = ExtResource( 13 )

[node name="AudioPlayer_MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -12.0
autoplay = true
bus = "bg music"

[node name="CanvasShockwave" parent="." instance=ExtResource( 15 )]

[node name="CanvasBlur" parent="." instance=ExtResource( 10 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 0.84, 0, 1 )
material = SubResource( 3 )
position = Vector2( 512, 300 )
amount = 100
lifetime = 2.0
lifetime_randomness = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 512, 300 )
spread = 180.0
gravity = Vector2( -2, 60 )
initial_velocity = 10.0
initial_velocity_random = 0.5
angle = 190.7
angle_random = 0.36
scale_amount = 0.9
scale_amount_random = 0.13
color_ramp = SubResource( 4 )
hue_variation = 0.11
hue_variation_random = 0.19

[node name="GUI" parent="." instance=ExtResource( 9 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false

[node name="ButtonTest" type="Button" parent="CanvasLayer"]
margin_left = 43.0
margin_top = 543.0
margin_right = 126.0
margin_bottom = 563.0
text = "button test"
script = ExtResource( 16 )

[connection signal="pressed" from="CanvasLayer/ButtonTest" to="CanvasLayer/ButtonTest" method="_on_ButtonTest_pressed"]
